# Hermes

./: README.md  setup.cfg  setup.py
Hermes/Content/Notifications/: panel.py
Hermes/content/: dashboard.py
Hermes/content/Notifications/: panel.py  urls.py
Hermes/enabled/: _2900_Notifications.py
Hermes/static/Notifications/: notifications.controller.js  notifications.module.js  notifications.module.spec.js  notifications.service.js  notifications.service.spec.js  table.html  testDash.module.js  websocket.service.js  websocket.service.spec.js
